--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__/
 *.py[codz]
 *$py.class
 
+.vscode/
+
 # C extensions
 *.so
 
@@ -143,6 +145,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+ml_venv/
 
 # Spyder project settings
 .spyderproject
